# rpmml-project

./: .gitignore  .pylintrc  README.md  environment.yml  mmd_README.md  pyproject.toml  run_all_ci_checks.sh  run_in_all_packages.sh
.github/workflows/: ci.yml
clean-diffuser/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
clean-diffuser/pipelines/: adaptdiffuser_d4rl_antmaze.py  adaptdiffuser_d4rl_kitchen.py  adaptdiffuser_d4rl_mujoco.py  dbc_kitchen.py  dbc_pusht.py  dbc_pusht_image.py  dbc_robomimic.py  dbc_robomimic_image.py  dd_d4rl_antmaze.py  dd_d4rl_kitchen.py  dd_d4rl_mujoco.py  diffuser_d4rl_antmaze.py  diffuser_d4rl_kitchen.py  diffuser_d4rl_mujoco.py  diffuserlite_d4rl_antmaze.ipynb  diffuserlite_d4rl_antmaze.py  diffuserlite_d4rl_kitchen.py  diffuserlite_d4rl_mujoco.py  dp_kitchen.py  dp_pusht.py  dp_pusht_image.py  dp_robomimic.py  dp_robomimic_image.py  dql_d4rl_antmaze.py  dql_d4rl_kitchen.py  dql_d4rl_mujoco.py  edp_d4rl_antmaze.py  edp_d4rl_kitchen.py  edp_d4rl_mujoco.py  idql_d4rl_antmaze.py  idql_d4rl_kitchen.py  idql_d4rl_mujoco.py  qgpo_d4rl_mujoco.py  sfbc_d4rl_mujoco.py  synther_d4rl_antmaze.py  synther_d4rl_kitchen.py  synther_d4rl_mujoco.py  utils.py  veteran_d4rl_antmaze.py  (+3 more)
config/: locomotion.py  pointmaze.py
d4rl/: README.md  pyproject.toml  setup.py
d4rl/d4rl/hand_manipulation_suite/assets/: DAPG_assets.xml
diffuser/: test.py  tomasz_readme.md  video_traj.py
gcp/: plan.sh
maze2d/: main.py  maze2d.py  planner.py
rpmml-project/: LICENSE  pyproject.toml
scripts/: generate_topological_order.py  install_all.py  read_results.py  release-run.sh  train.py  train_values.py
(+183 files in other folders)
